--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "omatech/mage-plugin-skeleton",
-    "description": "Skeleton to create new plugins for Mage",
+    "name": "omatech/mage-orders",
+    "description": "plugins orders for Mage",
     "keywords": [
         "omatech",
         "mage",
-        "mage-plugin-skeleton"
+        "mage-orders"
     ],
-    "homepage": "https://github.com/omatech/mage-plugin-skeleton",
+    "homepage": "https://github.com/omatech/mage-orders",
     "license": "MIT",
     "type": "library",
     "authors": [
@@ -18,7 +18,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "omatech/mage": "0.1.*"
+        "omatech/mage": "0.0.*",
+        "omatech/laravel-orders": "dev-master"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
